--- a/DQN_Tutorial.ipynb
+++ b/DQN_Tutorial.ipynb
@@ -197,6 +197,7 @@
         "id": "J6HsdS5GbSjd"
       },
       "source": [
+        "# Enables TensorFlow 2.x behaviors.\n",
         "tf.compat.v1.enable_v2_behavior()\n",
         "\n",
         "# Set up a virtual display for rendering OpenAI gym environments.\n",
@@ -330,6 +331,23 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tEyq6p2oLtQJ"
+      },
+      "source": [
+        "# YJ\n",
+        "print(env.time_step_spec())\n",
+        "# TimeStep(\n",
+        "#   step_type=ArraySpec(shape=(), dtype=dtype('int32'), name='step_type'),\n",
+        "#   reward=ArraySpec(shape=(), dtype=dtype('float32'), name='reward'), \n",
+        "#   discount=BoundedArraySpec(shape=(), dtype=dtype('float32'), name='discount', minimum=0.0, maximum=1.0),\n",
+        "#   observation=BoundedArraySpec(shape=(4,), dtype=dtype('float32'), name='observation', minimum=[-4.8000002e+00 -3.4028235e+38 -4.1887903e-01 -3.4028235e+38], maximum=[4.8000002e+00 3.4028235e+38 4.1887903e-01 3.4028235e+38]))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "b_lHcIcqUaqB"
@@ -382,6 +400,26 @@
         "next_time_step = env.step(action)\n",
         "print('Next time step:')\n",
         "print(next_time_step)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tsd4u7LKMqcY"
+      },
+      "source": [
+        "# YJ\n",
+        "print ('{},{},{},{}'.format('type','discount','reward','obs'))\n",
+        "next_time_step = env.reset()\n",
+        "for i in range(50):\n",
+        "  \n",
+        "  print(next_time_step.step_type, \n",
+        "        next_time_step.discount, \n",
+        "        next_time_step.reward, \n",
+        "        next_time_step.observation)\n",
+        "  next_time_step = env.step(action)"
       ],
       "execution_count": null,
       "outputs": []
@@ -595,10 +633,40 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "nczr8QLRVgou"
+      },
+      "source": [
+        "# YJ\n",
+        "print (time_step)\n",
+        "'''\n",
+        " TimeStep(\n",
+        "    step_type=<tf.Tensor: shape=(1,), dtype=int32, numpy=array([0], dtype=int32)>, \n",
+        "    reward=<tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.], dtype=float32)>, \n",
+        "    discount=<tf.Tensor: shape=(1,), dtype=float32, numpy=array([1.], dtype=float32)>, \n",
+        "    observation=<tf.Tensor: shape=(1, 4), dtype=float32, numpy=array([[0.03516338, 0.0273276 , 0.02860665, 0.01745503]], dtype=float32)>)\n",
+        "'''"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "PRFqAUzpNaAW"
       },
       "source": [
         "random_policy.action(time_step)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SM64MMbNf6Mc"
+      },
+      "source": [
+        "time_step.is_last()"
       ],
       "execution_count": null,
       "outputs": []
@@ -631,7 +699,7 @@
         "    time_step = environment.reset()\n",
         "    episode_return = 0.0\n",
         "\n",
-        "    while not time_step.is_last():\n",
+        "    while not time_step.is_last(): # step_type == 2\n",
         "      action_step = policy.action(time_step)\n",
         "      time_step = environment.step(action_step.action)\n",
         "      episode_return += time_step.reward\n",
@@ -690,6 +758,42 @@
         "    data_spec=agent.collect_data_spec,\n",
         "    batch_size=train_env.batch_size,\n",
         "    max_length=replay_buffer_max_length)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Of2zRMddk-Q1"
+      },
+      "source": [
+        "'''\n",
+        "agent = dqn_agent.DqnAgent(\n",
+        "    train_env.time_step_spec(),\n",
+        "    train_env.action_spec(),\n",
+        "    q_network=q_net,\n",
+        "    optimizer=optimizer,\n",
+        "    td_errors_loss_fn=common.element_wise_squared_loss,\n",
+        "    train_step_counter=train_step_counter)\n",
+        "'''\n",
+        "'''\n",
+        "train_env = tf_py_environment.TFPyEnvironment(train_py_env)\n",
+        "'''"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "feR7qYEIkiyK"
+      },
+      "source": [
+        "# YJ\n",
+        "print (agent.collect_data_spec)\n",
+        "print (train_env.batch_size)\n",
+        "print (replay_buffer_max_length)"
       ],
       "execution_count": null,
       "outputs": []
@@ -782,7 +886,22 @@
       "source": [
         "# For the curious:\n",
         "# Uncomment to peel one of these off and inspect it.\n",
-        "# iter(replay_buffer.as_dataset()).next()"
+        "iter(replay_buffer.as_dataset()).next()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uBv5tJgbl9-7"
+      },
+      "source": [
+        "# YJ\n",
+        "collect_data(train_env, random_policy, replay_buffer, initial_collect_steps)\n",
+        "for i in range(10) :\n",
+        "  next_step = iter(replay_buffer.as_dataset()).next()\n",
+        "  print (next_step[0].observation.numpy())"
       ],
       "execution_count": null,
       "outputs": []
@@ -842,7 +961,7 @@
         "# Compare this representation of replay data \n",
         "# to the collection of individual trajectories shown earlier.\n",
         "\n",
-        "# iterator.next()"
+        "iterator.next()"
       ],
       "execution_count": null,
       "outputs": []
@@ -905,6 +1024,28 @@
         "    avg_return = compute_avg_return(eval_env, agent.policy, num_eval_episodes)\n",
         "    print('step = {0}: Average Return = {1}'.format(step, avg_return))\n",
         "    returns.append(avg_return)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XCysEec3pITP"
+      },
+      "source": [
+        "experience, unused_info = next(iterator)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cCzKhr0Eqp9s"
+      },
+      "source": [
+        "unused_info"
       ],
       "execution_count": null,
       "outputs": []
@@ -1039,7 +1180,18 @@
         "id": "pJZIdC37yNH4"
       },
       "source": [
-        "create_policy_eval_video(random_policy, \"random-agent\")"
+        "create_policy_eval_video(random_policy, \"random-agent\", num_episodes=5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HsExrXgtrui5"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
